# beeswax

./: Cargo.toml  LICENSE  README.md  config.example.toml  config.test.toml
.github/workflows/: ci.yml  nightly.yml
src/: app.rs  config.rs  main.rs  menu.rs  persist.rs  theme.rs
src/model/: category.rs  column.rs  item.rs  mod.rs  section.rs  view.rs
src/ui/: catmgr.rs  customize.rs  fkeys.rs  input.rs  menu.rs  mod.rs  render.rs  view.rs  viewmgr.rs
