[package]
name = "beeswax"
version = "0.1.0"
edition = "2024"

[dependencies]
regex      = { version = "1", default-features = false, features = ["std", "unicode-case"] }
toml       = { version = "0.8", default-features = false, features = ["parse"] }
ratatui    = "0.29"
crossterm  = { version = "0.28", features = ["event-stream"] }
chrono     = { version = "0.4", features = ["clock"], default-features = false }
serde      = { version = "1", features = ["derive"] }
serde_json = "1"
aes-gcm    = "0.10"
argon2     = "0.5"
rand       = "0.8"
